# tub-rn-lab

./: .gitignore  CMakeLists.txt  README.md  group.txt
.github/workflows/: package_source.yml  pytest.yml
src/: webserver.c  webserver.h
src/lib/: dht.c  dht.h  http.c  http.h  message.c  message.h  socket.c  socket.h  udp.c  udp.h  utils.c  utils.h
src/lib/filesystem/: filesystem.c  filesystem.h  operations.c  operations.h
test/: check_submission.sh  conftest.py  dht.py  test_praxis1.py  test_praxis2.py  test_praxis3.py  util.py
